--- a/index.html
+++ b/index.html
@@ -87,11 +87,7 @@
             <hr class="divider" />
           </div>
           <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 mb-5">
-              Start Bootstrap can help you build better websites using the
-              Bootstrap framework! Just download a theme and start customizing,
-              no strings attached!
-            </p>
+            <p class="text-white-75 mb-5">close to your head</p>
             <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
           </div>
         </div>
@@ -104,11 +100,7 @@
           <div class="col-lg-8 text-center">
             <h2 class="text-white mt-0">We've got what you need!</h2>
             <hr class="divider divider-light" />
-            <p class="text-white-75 mb-4">
-              Start Bootstrap has everything you need to get your new website up
-              and running in no time! Choose one of our open source, free to
-              download, and easy to use themes! No strings attached!
-            </p>
+            <p class="text-white-75 mb-4">Solve the problems on your head</p>
             <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
           </div>
         </div>
@@ -178,7 +170,7 @@
               />
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-name">多邦腦膜修補片</div>
               </div>
             </a>
           </div>
@@ -195,7 +187,7 @@
               />
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-name">DOPA腦膜黏膠</div>
               </div>
             </a>
           </div>
@@ -212,7 +204,7 @@
               />
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-name">DOPA繃</div>
               </div>
             </a>
           </div>
@@ -229,7 +221,7 @@
               />
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-name">DOPA黏膏</div>
               </div>
             </a>
           </div>
@@ -246,7 +238,7 @@
               />
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-name">DOPA補腦片</div>
               </div>
             </a>
           </div>
@@ -263,7 +255,7 @@
               />
               <div class="portfolio-box-caption p-3">
                 <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-name">DOPA固腦膜</div>
               </div>
             </a>
           </div>
@@ -274,11 +266,7 @@
     <section class="page-section bg-dark text-white">
       <div class="container px-4 px-lg-5 text-center">
         <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a
-          class="btn btn-light btn-xl"
-          href="https://startbootstrap.com/theme/creative/"
-          >Download Now!</a
-        >
+        <a class="btn btn-light btn-xl">Download Now!</a>
       </div>
     </section>
     <!-- Donate-->
@@ -423,7 +411,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-4 text-center mb-5 mb-lg-0">
             <i class="bi-phone fs-2 mb-3 text-muted"></i>
-            <div>+1 (555) 123-4567</div>
+            <div>(+886) 0987-987987</div>
           </div>
         </div>
       </div>
