--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
     <!-- Call to action-->
     <section class="page-section bg-dark text-white">
       <div class="container px-4 px-lg-5 text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl">Download Now!</a>
+        <h2 class="mb-4">The best biomedical shop</h2>
+        <a class="btn btn-light btn-xl">BUY NOW!</a>
       </div>
     </section>
     <!-- Donate-->
@@ -274,14 +274,14 @@
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-8 text-center">
-            <h2 class="text-white mt-0">We've got what you need!</h2>
+            <h2 class="text-white mt-0">We need you！</h2>
             <hr class="divider divider-light" />
-            <p class="text-white-75 mb-4">
-              Start Bootstrap has everything you need to get your new website up
-              and running in no time! Choose one of our open source, free to
-              download, and easy to use themes! No strings attached!
-            </p>
-            <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+            <p class="text-white-75 mb-4">please donate some to us</p>
+            <a
+              class="btn btn-light btn-xl"
+              href="https://merchant.twmp.com.tw:20443/addongw/p2p/getByToken?token=41534609-0baa-4126-b738-203931f445ad"
+              >DONATE!</a
+            >
           </div>
         </div>
       </div>
